[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "realtime"
edition = "2018"
license-file = "LICENSE"
name = "realtime"
readme = "./README.md"
repository = "https://github.com/rise0chen/realtime.git"
version = "0.1.1"

[features]
preempt = ["rt-thread"]
rtai = ["rt-rtai"]
xenomai = ["rt-xenomai"]

[dependencies]
realtime-core = {version = "0.1", path = "../realtime-core"}
rt-rtai = {version = "0.1", path = "../rt_rtai", optional = true}
rt-thread = {version = "0.1", path = "../rt_thread", optional = true}
rt-xenomai = {version = "0.1", path = "../rt_xenomai", optional = true}
