[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "rtai"
edition = "2021"
license-file = "LICENSE"
name = "rt-rtai"
readme = "./README.md"
repository = "https://github.com/rise0chen/realtime.git"
version = "0.1.11"

[dependencies]
libc = "^0.2"
log = "^0.4"
nix = "0.26"
realtime-core = {version = "0.1", path = "../realtime-core"}

[dev-dependencies]
clock_source = "^0.2"

[build-dependencies]
cc = "1.0"
