[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "realtime"
edition = "2021"
license-file = "LICENSE"
name = "rt-thread"
readme = "./README.md"
repository = "https://github.com/rise0chen/realtime.git"
version = "0.1.1"

[dependencies]
log = "^0.4"
realtime = {version = "0.1", path = "../realtime"}
thread-priority = "0.8.0"

[target.'cfg(not(windows))'.dependencies]
nix = "0.24.0"

[dev-dependencies]
clock_source = "^0.2"
