[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "realtime"
edition = "2021"
license-file = "LICENSE"
name = "rt-thread"
readme = "./README.md"
repository = "https://github.com/rise0chen/realtime.git"
version = "0.1.11"

[dependencies]
log = "^0.4"
realtime-core = {version = "0.1", path = "../realtime-core"}
thread-priority = "0.13"

[target.'cfg(not(windows))'.dependencies]
nix = "0.26"

[dev-dependencies]
clock_source = "^0.2"
