[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "xenomai"
edition = "2021"
license-file = "LICENSE"
name = "rt-xenomai"
readme = "./README.md"
repository = "https://github.com/rise0chen/realtime.git"
version = "0.1.1"

[dependencies]
libc = "^0.2"
log = "^0.4"
nix = "0.24.0"
realtime = {version = "0.1", path = "../realtime"}

[dev-dependencies]
clock_source = "^0.2"

[build-dependencies]
cc = "1.0"
